[package]
name = "api-adresse-rs"
version = "0.1.1"
authors = ["Arnaud ELDIN <eldinarnaud@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library to consume https://api.gouv.fr/les-api/base-adresse-nationale from french gouvernement"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
